2012-03-31: zeitgeist-datasources 0.8.1

* New Firefox datasource using js-ctypes which replaces old native addon
* New Thunderbird datasource
* New Monodeveloper datasources
* Removed gedit Datasource as it uses GtkRecentManager
* Removed eog (Eye of GNOME) Datasource as it uses GtkRecentManager
* Removed Totem datasource as it is now upstream
* Stop XChat from logging messages to avoid polluting database
* Set telepathy subject uri's to telepathy://account_path/target_id
* Fix actor for chrome
* Lazily loads Bazaar datasource
* Fix an issue in which event was logged only for one chrome window
* Log Firefox downloads
* Update eog plugin file
* Fix firefox local-install
* Fixes the bug which generated messages when opening or saving file in emacs
    zeitgeist-event-interpretation: Symbol's function definition 
    is void: zeitgeist-open-file-event
* Log website visit only if page has been visited only for 5 or more seconds
* Chrome datasource: Save a thumbnail with every page load

2011-06-05: zeitgeist-dataproviders 0.8.0 "Indian Spices"
------------------------------------------------------------

Dataproviders present:

* Bazaar - bzr
* Chrome - chrome
* Emacs - emacs
* Eye of GNOME - eog
* Firefox 3.6 - firefox-36-libzg (Not present in tarball but in repos)
* Firefox 4.0 - firefox-40-libzg
* Geany - geany
* Telepathy - telepathy
* Tomboy - tomboy
* Vim - vim
* XChat - xchat
* Totem - totem-libzg
* gedit - gedit
* Rhythmbox - rhythmbox

Dataprovider present upstream:

* totem - git.gnome.org/totem
* edit - git.gnome.org/gedit
* banshee - gitorious.org/banshee-community-extensions
* rhythmbox - git.gnome.org/rhythmbox

Bugs fixed:

* Firefox Dataprovider does now wotk with FF 4.0. LP Bug #690594
* Make for tomboy does not work. LP Bug #733653
* Tomboy dataprovider doesn't register with DataSourceRegistry. LP Bug #691840
* Geany datasource not picked up by Geany. LP Bug #690355
* Geany fails to build even though it is enabled. LP Bug #769295

Contributers:
