@@ -63,7 +63,7 @@ AC_ARG_ENABLE([all-plugins],
 AC_MSG_NOTICE([Requested to enable all plugins: ${all_plugins}])
 
 # The full list of plugins
-allowed_plugins="bzr chrome geany vim emacs tomboy telepathy xchat rhythmbox firefox firefox-36-libzg monodevelop thunderbird"
+allowed_plugins="bzr chrome geany vim emacs tomboy telepathy xchat firefox firefox-36-libzg monodevelop thunderbird"
 # currently disabled = "epiphany"
 
 # npapi-plugin has a template Makefile.am, but don't use it directly
@@ -98,28 +98,6 @@ for plugin in ${used_plugins}; do
 		chrome)
 			if test "${HAVE_LIBZG}" != "yes" ; then
 				plugin_error_or_ignore "libzeitgeist not found"
-				continue
-			fi
-		;;
-		rhythmbox)
-		;;
-		rhythmbox-popular)
-			if test "${with_vala}" != "yes" ; then
-				plugin_error_or_ignore "you need vala installed to use the ${plugin} plugin"
-				continue
-			fi
-			if test "${HAVE_LIBZG}" != "yes" ; then
-				plugin_error_or_ignore "libzeitgeist not found"
-				continue
-			fi
-			if test "${HAVE_GTK}" != "yes" ; then
-				plugin_error_or_ignore "gtk+-2.0 not found"
-				continue
-			fi
-			PKG_CHECK_MODULES([LIBXML], [libxml-2.0],
-				[HAVE_LIBXML=yes], [HAVE_LIBXML=no])
-			if test "${HAVE_LIBXML}" != "yes" ; then
-				plugin_error_or_ignore "libxml package not found"
 				continue
 			fi
 		;;
@@ -305,10 +283,6 @@ if test "x${PLUGINS}" != "x" ; then
                                         	;;
                                         	tomboy)
                                         		AC_CONFIG_FILES([tomboy/Makefile])
-                                        		continue 2
-                                        	;;
-                                        	rhythmbox)
-                                        		AC_CONFIG_FILES([rhythmbox/Makefile])
                                         		continue 2
                                         	;;
                                         	thunderbird)
