@@ -1,9 +1,0 @@
-[RB Plugin]
-Loader=python
-Module=zeitgeist-plugin
-IAge=1
-Name=Zeitgeist
-Description=Inform Zeitgeist about your activity
-Authors=Markus Korn <thekorn@gmx.de>
-Copyright=Copyright © 2009 Markus Korn
-Website=http://www.zeitgeist-project.com
